--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "symfony/yaml": "^3.2",
+        "symfony/yaml": "^3.3|^4",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/framework-bundle": "^3.2",
-        "symfony/console": "^3.2",
-        "symfony/event-dispatcher": "^3.2"
+        "symfony/framework-bundle": "^3.3|^4",
+        "symfony/console": "^3.3|^4",
+        "symfony/event-dispatcher": "^3.3|^4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
