Fix made public the manager

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,6 +4,7 @@ services:
 
     terox.subscription.manager:
         class: Terox\SubscriptionBundle\Subscription\SubscriptionManager
+        public: true
         arguments:
             - "@terox.subscription.registry"
             - "@terox.subscription.repository.subscription"
